# designPatterns

./: .gitmodules
DP homework1/: Makefile  pyproject.toml
DP homework1/game_simulation/: __init__.py  creature_classes.py  simulate_game.py
DP homework1/tests/: test_creature_behaviour.py
DP homework2v2/: main.py  production.db
DP homework2v2/controllers/: product_controller.py  receipt_controller.py  sales_controller.py  unit_controller.py
DP homework2v2/database/: connection.py  init_db.py  schemas.sql
DP homework2v2/models/: product.py  receipt.py  sales.py  unit.py
DP homework2v2/repositories/: product_repository.py  receipt_repository.py  sales_repository.py  unit_repository.py
DP homework2v2/services/: product_service.py  receipt_service.py  sales_service.py  unit_service.py
DP homework2v2/tests/: conftest.py  test_product.py  test_receipt.py  test_sales.py  test_unit.py
DP homework3/: pyproject.toml
DP homework3/src/: main.py  observer.py  weather_data.py  weather_station.py
DP homework3/src/observers/: humidity_alert.py  temperature_alert.py  weather_display.py  wind_speed_alert.py
DP homework3/tests/: test_humidity_alert.py  test_temperature_alert.py  test_weather_display.py  test_weather_station.py  test_wind_speed_alert.py
